tweaked process startup to be more robust